backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-pinner-backend
  labels:
    app: note-pinner-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: note-pinner-backend
  template:
    metadata:
      labels:
        app: note-pinner-backend
    spec:
      containers:
        - name: backend
          image: wala19/mini-devops-app-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 20
